# slintcn

./: .gitignore  Makefile  README.md  package.json
.githooks/: pre-push
.github/workflows/: pages.yml
cli/: Cargo.toml  README.md
cli/src/: lib.rs  main.rs
cli/tests/: install.rs
docs/: FONTS.md  INTRODUCING_SLINTCN.md  ROADMAP.md
examples/showcase/: Cargo.toml  build.rs
examples/showcase/ui/: app_window.slint
registry/default/: a11y.json  registry.json
registry/default/blocks/: profile.slint  stats.slint  team.slint
registry/default/components/: alert-dialog-panel.slint  alert-dialog.slint  aspect-ratio.slint  button-group.slint  button.slint  card.slint  collapsible.slint  combobox.slint  command.slint  dialog-panel.slint  dialog.slint  empty.slint  icon.slint  input.slint  lucide-paths.slint  radio-group.slint  select.slint  sheet-panel.slint  sheet.slint  sidebar.slint  toast.slint  tooltip.slint
registry/default/theme/: palette-slate.slint  palette-stone.slint  palette-zinc.slint
schema/: registry.schema.json
scripts/: build-docs.mjs  docs-usage.mjs
templates/: slintcn.json
web/: create.html  demo.html  embed.html  index.html
