[package]
name = "slintcn-showcase"
version = "0.34.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "slintcn-showcase"
path = "src/main.rs"

[[bin]]
name = "snapshot"
path = "src/bin/snapshot.rs"
required-features = ["snapshot"]

[features]
snapshot = ["dep:png", "dep:serde_json"]

[dependencies]
slint = { version = "1.16", features = ["compat-1-2", "renderer-software"] }
png = { version = "0.17", optional = true }
serde_json = { version = "1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console", "Window", "Location"] }

[build-dependencies]
slint-build = "1.16"
